--- a/index.html
+++ b/index.html
@@ -1,13 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Portfolio - Krupa Nayak</title>
-<!--    <link rel="stylesheet" href="style.css">-->
+    <meta http-equiv="refresh" content="0; url=home.html">
+    <title>Redirecting...</title>
 </head>
 <body>
-<h1>Welcome to My Portfolio</h1>
-<p>This is my work in Java, Spring Boot, and full-stack development.</p>
+<p>If you are not redirected, <a href="home.html">click here</a>.</p>
 </body>
 </html>
